--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
     <script type="text/javascript">
       // Client ID and API key from the Developer Console
-      var CLIENT_ID = '<92193169320-nk6jeead2callmh29mlb6fi4ta1pan0o.apps.googleusercontent.com>';
-      var API_KEY = '<AIzaSyCsKwaps8AjWELv1XeWpUzS2vjXAs_HPvM>';
+      var CLIENT_ID = '384049678839-t7hegl3uf1vkmm207odgcpa1bjt5dlej.apps.googleusercontent.com';
+      var API_KEY = 'AIzaSyBWeLFjHrNSEdLvYhRgYxIuQJXWYtFXJoE';
 
       // Array of API discovery doc URLs for APIs used by the quickstart
       var DISCOVERY_DOCS = ["https://www.googleapis.com/discovery/v1/apis/classroom/v1/rest"];
@@ -127,5 +127,7 @@
       onload="this.onload=function(){};handleClientLoad()"
       onreadystatechange="if (this.readyState === 'complete') this.onload()">
     </script>
+
+    <script src="./credentials.json"></script>
   </body>
 </html>
