--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Classroom API Quickstart</title>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
     <p>Classroom API Quickstart</p>
@@ -127,7 +128,5 @@
       onload="this.onload=function(){};handleClientLoad()"
       onreadystatechange="if (this.readyState === 'complete') this.onload()">
     </script>
-
-    <script src="./credentials.json"></script>
   </body>
 </html>
